--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ soundfile==0.12.1
 opencv-python==4.11.0.86
 pillow==10.2.0
 numpy==1.26.4
-torch==2.7.1 
+torch==2.7.1
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0 
