Create standalone Python API for Railway deployment

--- a/.railwayignore
+++ b/.railwayignore
@@ -1,33 +1,38 @@
-# Ignore Node.js files for Railway Python deployment
+# EXCLUDE EVERYTHING EXCEPT PYTHON API FILES
+
+# Exclude all Node.js and frontend files
 node_modules/
 package.json
 package-lock.json
 next.config.js
 .next/
 .vercel/
-
-# Ignore frontend files
-src/app/*
-!src/app/api/video.py
-src/components/
-src/lib/*
-!src/lib/video-generator/
-!src/lib/story-generator/
+src/
 public/
-
-# Ignore other config files
 tailwind.config.*
 postcss.config.*
 tsconfig.json
 eslint.config.*
 components.json
+next-env.d.ts
+vercel.json
+.vercelignore
 
-# Keep only Python-related files
-# requirements.txt (keep)
-# runtime.txt (keep)  
-# Procfile (keep)
-# nixpacks.toml (keep)
-# railway.json (keep)
-# src/app/api/video.py (keep)
-# src/lib/video-generator/ (keep)
-# src/lib/story-generator/ (keep) 
+# Exclude other unnecessary files
+.git/
+venv/
+tmp/
+api/
+scripts/
+README.md
+.gitignore
+test_output.mp4
+
+# KEEP ONLY THESE FILES:
+# main.py
+# api_standalone.py  
+# requirements.txt
+# runtime.txt
+# Procfile
+# railway.json
+# .railwayignore 
